tests/ui/feature-gates/allow-features.stderr
error[E0725]: the feature `unknown_stdlib_feature` is not in the list of allowed features
  --> $DIR/allow-features.rs:6:12
   |
LL | #![feature(unknown_stdlib_feature)]
   |            ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0725`.
